--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#typicalmeeting">Typical Meeting</a>
+              <a class="nav-link js-scroll-trigger" href="#typicalmeeting">Forms</a>
             </li>
             <li class="nav-item">
 
@@ -124,14 +124,50 @@ Sergeant at Arms: Ben Noel <br />
     </section>
     <section id="Typical Meeting">
       <div class="container">
-        <h2 class="text-center">Typical Meeting</h2>
+        <h2 class="text-center">Forms</h2>
 
         <div class="container">
           <!-- Accent-colored raised button -->
 <center>
-  <<center> <a href ="http://saratogagavel.weebly.com/typical-meeting.html" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
-    View Typical Meetings
+  <a href ="http://download943.mediafire.com/glx22lcndn7g/78x0dikb2mhkbx4/all-roles-explained-in-detail.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Details of Roles
   </a>
+  </button>
+  <pre>
+
+  </pre>
+  <a href ="http://download1650.mediafire.com/svs80zwy0fug/wlfu1a1ghxikn9l/coach-gavelier-portrait.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Coach
+  </a>
+  </button>
+  <pre>
+
+  </pre>
+  <a href ="http://download1499.mediafire.com/d3z1jw3kcr5g/uouok7uhcebu3cu/grammarian-form.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Gramarian
+  </a>
+  </button>
+  <pre>
+
+  </pre>
+  <a href ="http://download941.mediafire.com/9twof1r9p9xg/4xnlwksj8b1tu5o/head-coach-gavelier.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Head Coach
+  </a>
+  </button>
+  <pre>
+
+  </pre>
+  <a href ="http://download1079.mediafire.com/sp82s0p830ig/4ff5o17pypw6n7a/timers-log-voice-masters.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Timer Log
+  </a>
+  </button>
+  <pre>
+
+  </pre>
+  <a href ="http://download949.mediafire.com/8x02md7bsx6g/sbykjbbku3l64gy/wizard-of-ahs-advanced.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+    Wizard Of Ahs
+  </a>
+  </button>
   <pre>
 
   </pre>
@@ -139,6 +175,7 @@ Sergeant at Arms: Ben Noel <br />
     Saratoga Gavel Club Youtube
   </a>
   </button>
+  <pre>
 
 </center>
 </center>
