--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+<style>
+.setwidth {width: 250px;}
+</style>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -129,7 +131,7 @@ Sergeant at Arms: Ben Noel <br />
         <div class="container">
           <!-- Accent-colored raised button -->
 <center>
-  <a href ="http://download943.mediafire.com/glx22lcndn7g/78x0dikb2mhkbx4/all-roles-explained-in-detail.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download943.mediafire.com/glx22lcndn7g/78x0dikb2mhkbx4/all-roles-explained-in-detail.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth">
     Details of Roles
   </a>
   </button>
