--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <style>
-.setwidth {width: 250px;}
+.setwidth {
+  width: 272px;
+  font-size:12pt
+  }
 </style>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -138,42 +141,42 @@ Sergeant at Arms: Ben Noel <br />
   <pre>
 
   </pre>
-  <a href ="http://download1650.mediafire.com/svs80zwy0fug/wlfu1a1ghxikn9l/coach-gavelier-portrait.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download1650.mediafire.com/svs80zwy0fug/wlfu1a1ghxikn9l/coach-gavelier-portrait.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Coach
   </a>
   </button>
   <pre>
 
   </pre>
-  <a href ="http://download1499.mediafire.com/d3z1jw3kcr5g/uouok7uhcebu3cu/grammarian-form.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download1499.mediafire.com/d3z1jw3kcr5g/uouok7uhcebu3cu/grammarian-form.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Gramarian
   </a>
   </button>
   <pre>
 
   </pre>
-  <a href ="http://download941.mediafire.com/9twof1r9p9xg/4xnlwksj8b1tu5o/head-coach-gavelier.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download941.mediafire.com/9twof1r9p9xg/4xnlwksj8b1tu5o/head-coach-gavelier.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Head Coach
   </a>
   </button>
   <pre>
 
   </pre>
-  <a href ="http://download1079.mediafire.com/sp82s0p830ig/4ff5o17pypw6n7a/timers-log-voice-masters.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download1079.mediafire.com/sp82s0p830ig/4ff5o17pypw6n7a/timers-log-voice-masters.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Timer Log
   </a>
   </button>
   <pre>
 
   </pre>
-  <a href ="http://download949.mediafire.com/8x02md7bsx6g/sbykjbbku3l64gy/wizard-of-ahs-advanced.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="http://download949.mediafire.com/8x02md7bsx6g/sbykjbbku3l64gy/wizard-of-ahs-advanced.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Wizard Of Ahs
   </a>
   </button>
   <pre>
 
   </pre>
-  <a href ="https://www.youtube.com/channel/UCY_RGB1DBXPXqCkbgtlLWAQ" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" >
+  <a href ="https://www.youtube.com/channel/UCY_RGB1DBXPXqCkbgtlLWAQ" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
     Saratoga Gavel Club Youtube
   </a>
   </button>
