--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   font-size:12pt
   }
 </style>
+<style>
+.goodfont {
+  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+  }
+</style>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -50,10 +60,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#typicalmeeting">Forms</a>
+              <a class="nav-link js-scroll-trigger" href="#forms">Forms</a>
             </li>
             <li class="nav-item">
-
+  <a class="nav-link js-scroll-trigger" href="#typicalmeeting">Typical Meeting</a>
             </li>
           </ul>
         </div>
@@ -127,7 +137,7 @@ Sergeant at Arms: Ben Noel <br />
         </div>
       </div>
     </section>
-    <section id="Typical Meeting">
+    <section id="Forms">
       <div class="container">
         <h2 class="text-center">Forms</h2>
 
@@ -184,6 +194,70 @@ Sergeant at Arms: Ben Noel <br />
 
 </center>
 </center>
+
+        </div>
+        <div class="container">
+
+          </button>
+        </div>
+      </div>
+    </section>
+    <section id="Typical Meeting">
+      <div class="container">
+        <h2 class="text-center">Typical Meeting</h2>
+
+        <div class="container">
+          <!-- Accent-colored raised button -->
+<pre class = "goodfont">
+  Saratoga Toastmasters | Roles 101
+The success of a Toastmasters meeting depends on the program participants. There are many roles to fill, and each job is designed to improve the members’ public speaking,listening and leadership skills. Program participants must know and understand their duties so they can prepare for them.
+****If your role title is in BLUE, you have tasks to perform day(s) before the session ****
+VP EDUCATION
+Send out the meeting agenda with role assignments for the upcoming Saturday session by Tuesday.
+Inform Toasmaster to followup on unassigned roles.
+TOASTMASTER
+The Toastmaster is a meeting’s director and host. You won’t usually be assigned this role until you are thoroughly familiar with the club and its procedures.
+As the Toastmaster, you’ll introduce each speaker. If a speaker will not write his or her own introduction, you will write it. Introductions must be brief and carefully planned. Contact speakers before the meeting to ask about: Speech topic, Manual and project title.
+Make sure all roles are filled the day before the session (that is on Friday). If there are any unassigned roles, send out an email to the group
+Print at least 25 copies of agenda sheet
+Collect brief intros from all speakers & evaluators
+Get breakfast for at least 15-20 people (Suggested items: Pastries, Cookies, Fruits, Juice, Yogurt, Cake. Home cooked items are everyone's favorites :-))
+Adhere to the timing in the agenda
+TABLE TOPICS MASTER
+With TABLE TOPICS™, the Topicsmaster gives members who aren’t assigned a speaking role the opportunity to speak during the meeting. The Topicsmaster challenges each member with a subject, and the speaker responds with a one- to two-minute impromptu talk. When the Toastmaster introduces you, walk to the lectern and assume control of the meeting: - Briefly state the purpose of Table Topics and mention any theme. - If your club has a word of the day, encourage speakers to use that word in their response.- Be certain everyone understands the maximum time they have for their response and how the timing device works (if the timer hasn’t already done so).
+Talk to Toastmaster for the session and get the theme for the session. If there is no theme, feel free to pick one
+Prepare 12 - 15 questions on the topic. Recommendations: Keep questions open ended (What do you think? vs. Do you agree or disagree).
+Call members who don't have any roles assigned (Call someone who don't have green sheet on their name tag)
+Remind the aduience to use "Word of the day"
+Summarize (if time permits) at the end and ask for timer report for voting
+SPEAKER
+Speaking program is the center of every Toastmasters meeting. After all, what’s Toastmasters without the talking? But members don’t just stand up and start yakking. They use the guidelines in the Competent Communication (CC) manual and the Advanced Communication Series (ACS) manuals to fully prepare their presentations.Every speaker is a role model and club members learn from one another’s speeches. Prepare and rehearse to ensure you present the best speech possible. No speech is perfect. So, get out there and try! If you don’t write your own speech introduction, make sure the Toastmaster of the meeting prepares a good one for you.
+Look up the CC Manual and read about the project & objectives. If you are working on ohter manuals, please refer those manuals and projects
+Prepare speech focusing on objectives and make sure to follow timing guidelines provided in the manual
+Talk to your mentor (If no one is assigned, talk to VP Education immidiately and get a mentor)
+Practice, Practice & Practice. Practice solo, Practice in front of family, Practice with mentor
+Gather feedback from evaluator & audience
+GENERAL EVALUATOR
+Ensure the speech and leadership project evaluators know their responsibilities, supervise the timer, grammarian and Ah-Counter, Evaluate everything that takes place during the club meeting and make sure each activity is performed correctly.EVALUATOR
+:Several days before the meeting, review the Effective Evaluation manual. Talk with the speaker or leader you’ve been assigned to evaluate and find out which manual project they will present. Review the project goals and what the speaker or leader hopes to achieve. Begin and end your evaluation with a note of encouragement or praise. Commend a successful speech or leadership assignment and describe specifically how it was successful. Don’t allow the speaker or leader to remain unaware of a valuable asset such as a smile or a sense of humor. Likewise, don’t permit the speaker or leader to remain ignorant of a serious fault: if it is personal, write it but don’t mention it aloud. Give the speaker or leader deserved praise and tactful suggestions in the manner you would like to receive them.AH-COUNTER
+The purpose of the Ah-Counter is to note any word or sound used as a crutch by anyone who speaks during the meeting. Words may be inappropriate interjections, such as and, well, but, so and you know. Sounds may be ah, um or er. You should also note when a speaker repeats a word or phrase such as “I, I” or “This means, this means.” These words and sounds can be annoying to listeners. The Ah-Counter role is an excellent opportunity to practice your listening skills.TIMER
+One of the skills Toastmasters practice is expressing a thought within a specific time. As timer you are responsible for monitoring time for each meeting segment and each speaker. You’ll also operate the timing signal, indicating to each speaker how long he or she has been talking. Serving as timer is an excellent opportunity to practice giving instructions and time management – something we do every day.WORD MASTER
+Select a "word of the day" for the meeting.It should be a word that will help members increase their vocabulary – a word that can be incorporated easily into everyday conversation but is different from the way people usually express themselves. Adjectives and adverbs are more adaptable than nouns or verbs, but feel free to select your own special word.
+Select a "word of the day" (if this is done in your club)
+Print your word on the white board, its part of speech (adjective, adverb, noun, verb) and a brief definition in letters large enough to be seen from the back of the room
+Prepare a sentence showing how the word is used
+When introduced: Announce the word of the day, state its part of speech, define it, use it in a sentence and ask that anyone speaking during any part of the meeting use it
+GRAMMARIAN
+Throughout the meeting, listen to everyone’s word usage. Write down any awkward use or misuse of the language (incomplete sentences, sentences that change direction in midstream, incorrect grammar or malapropisms) with a note of who erred. For example, point out if someone used a singular verb with a plural subject. “One in five children wear glasses” should be “one in five children wears glasses.” Note when a pronoun is misused. “No one in the choir sings better than her” should be “No one in the choir sings better than she.”THOUGHT OF THE DAY
+The thought, an inspiring quotation that sets the tone for the day’s meeting, is a welcome option in many clubs. It is usually delivered by a designated club member at the beginning or the end of the meeting, and is sometimes used as a replacement for or in combination with an invocation or pledge of allegiance.
+Pick a quote or thought. Please limit it to less than a minute
+When introduced: tell your quote/thought of the day
+JOKE MASTER
+This a great way to end the session on light note. The idea is to have members end the session on light note and prepare for rest of the day with joyous mood!
+Present clean, concise, appropriate jokes. Please limit it to less than a minute. Can be joke, anecdote, or personal humorous story. Be dramatic: act out the part enthusiastically
+When introduced: tell your joke. Have fun!
+
+</pre>
 
         </div>
         <div class="container">
