--- a/index.html
+++ b/index.html
@@ -20,24 +20,12 @@
 </style>
 <style>
 .goodfont {
-  position: absolute;
-  width: 2.6em;
-  left: 50%;
-  top: 25%;
-  font-size: 10em;
-  text-align: center;
-  margin-left: -1.3em;
-  line-height: 0.8em;
-  letter-spacing: -0.05em;
-  color: #000;
-  text-shadow: -2px -2px 0 #ff6, 2px -2px 0 #ff6, -2px 2px 0 #ff6, 2px 2px 0 #ff6;
-  opacity: 0;
-  z-index: 1;
-  -webkit-animation: logo 5s ease-out 2.5s;
-  -moz-animation: logo 5s ease-out 2.5s;
-  -ms-animation: logo 5s ease-out 2.5s;
-  -o-animation: logo 5s ease-out 2.5s;
-  animation: logo 5s ease-out 2.5s;
+  font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
   }
 </style>
     <!-- Custom fonts for this template -->
@@ -218,7 +206,7 @@ Sergeant at Arms: Ben Noel <br />
       <div class="container">
         <h2 class="text-center">Typical Meeting</h2>
 
-        <div class="container">
+        <div class="row">
           <!-- Accent-colored raised button -->
 <pre class = "goodfont">
   Saratoga Toastmasters | Roles 101
