--- a/index.html
+++ b/index.html
@@ -204,11 +204,12 @@ Sergeant at Arms: Ben Noel <br />
     </section>
     <section id="Typical Meeting">
       <div class="container">
+          <hr class="star-light">
         <h2 class="text-center">Typical Meeting</h2>
 
         <div class="row">
           <!-- Accent-colored raised button -->
-<pre class = "goodfont">
+<pre class = "goodfont" color = "white">
   Saratoga Toastmasters | Roles 101
 The success of a Toastmasters meeting depends on the program participants. There are many roles to fill, and each job is designed to improve the members’ public speaking,listening and leadership skills. Program participants must know and understand their duties so they can prepare for them.
 ****If your role title is in BLUE, you have tasks to perform day(s) before the session ****
