--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Sergeant at Arms: Ben Noel <br />
         </div>
       </div>
     </section>
-    <section class = "Typical Meeting" id="about">
+    <section  id="about">
       <div class="container">
 
         <h2 class="text-center">Typical Meeting</h2>
