--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
 
     <!-- About Section -->
     <section class="success" id="about">
-      <div class="container">
-        <h2 class="text-center">Our Officers 2017-2018</h2>
-        <hr class="star-light">
-
 <div class = "container">
     <img class="img-fluid" src="img/2017.jpg" alt="">
   </img>
-  <div class="row">
-  <p>
-    In the beginning of the year, at Saratoga Gavel Club, we elect leaders to help run our club smoothly. We have a President, Vice President of Education, Vice President of Public Relations,  Secretary, and Sergeant of Arms.</p>
+  <h2 class="text-center">Our Officers 2017-2018</h2>
+  <hr class="star-light">
+
+<div class = "container">
+<img class="img-fluid" src="img/2017.jpg" alt="">
+</img>
+<div class="row">
+<p>
+In the beginning of the year, at Saratoga Gavel Club, we elect leaders to help run our club smoothly. We have a President, Vice President of Education, Vice President of Public Relations,  Secretary, and Sergeant of Arms.</p>
 ​
 ​<p> Current Officers Team 2017-2018 and Emails <br />
 President: Paul Maruthanayagam <br />
@@ -122,20 +124,19 @@ Email: pmarutha@gmail.com <br />
 
 Vice President of Education: Nelson Mu <br />
 
-​Email:  <a href="mailto:thenelsonmu@gmail.com">thenelsonmu@gmail.com</a> <br />
+​Email:  thenelsonmu@gmail.com <br />
 Vice President of Membership: Ray Lin <br />
-​ Email: <a href="mailto:raylin01@gmail.com">raylin01@gmail.com</a> <br />
+​ Email: raylin01@gmail.com <br />
 Vice President of Public Relations: Zachary <br />
-Email: <a href="mailto:zacharytgeorge@gmail.com">zacharytgeorge@gmail.com</a> <br />
+Email: zacharytgeorge@gmail.com <br />
 Secretary: Taylor <br />
-​ Email: <a href="mailto:tayathena@gmail.com">tayathena@gmail.com</a> <br />
+​ Email: tayathena@gmail.com <br />
 Treasurer: Vincent <br />
-Email: <a href="mailto:vincenthwang@gmail.com">vincenthwang@gmail.com</a> <br />
+Email: vincenthwang@gmail.com <br />
 Sergeant at Arms: Ben Noel <br />
-​Email: <a href="mailto:benjaminnoel@gmail.com">benjaminnoel@gmail.com</a> <br />
+​Email: benjaminnoel@gmail.com <br />
 </p>
-        </div>
-      </div>
+</div>
     </section>
     <section id="Forms">
       <div class="container">
