--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@ When introduced: tell your joke. Have fun!
 
         <h4> Example of a Saratoga Gavel Club Video </h4>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/1nbu0VqVSxE" frameborder="0" allowfullscreen></iframe>
+        <pre>
+        </pre>
         <a href ="https://www.youtube.com/channel/UCY_RGB1DBXPXqCkbgtlLWAQ" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
         View More Saratoga Gavel Club Videos
         </a>
