--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ When introduced: tell your joke. Have fun!
         <pre>
         </pre>
         <a href ="https://www.youtube.com/channel/UCY_RGB1DBXPXqCkbgtlLWAQ" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth" >
-        View More Saratoga Gavel Club Videos
+        View More Videos
         </a>
 
         </div>
