--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@ Sergeant at Arms: Ben Noel <br />
 
         <div class="container">
           <!-- Accent-colored raised button -->
+          <pref>
+          </pref>
 <center>
   <a href ="http://download943.mediafire.com/glx22lcndn7g/78x0dikb2mhkbx4/all-roles-explained-in-detail.pdf" target="_blank" button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent setwidth">
     Details of Roles
