--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@ sans-serif;
 	line-height: 26.4px;
   }
 </style>
+<style>
+.titlefont {
+  font-family: "Bowlby One"
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+}
+</style>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"
@@ -244,10 +253,10 @@ fill, and each job is designed to improve the members’<br>
 public speaking,listening and leadership skills. Program participants must know and understand their
 duties so they can prepare for them.
 ****If your role title is in BLUE, you have tasks to perform day(s) before the session ****
-<h4>VP EDUCATION</h4>
+<h4 class = "titlefont">VP EDUCATION</h4>
 Send out the meeting agenda with role assignments for the upcoming Saturday session by Tuesday.
 Inform Toasmaster to followup on unassigned roles.
-<h4>TOASTMASTER</h4>
+<h4 class = "titlefont">TOASTMASTER</h4>
 The Toastmaster is a meeting’s director and host. You won’t usually be assigned this role until you
 are thoroughly familiar with the club and its procedures.
 As the Toastmaster, you’ll introduce each speaker. If a speaker will not write his or her own
@@ -294,7 +303,8 @@ Gather feedback from evaluator & audience
 <h4>GENERAL EVALUATOR</h4>
 Ensure the speech and leadership project evaluators know their responsibilities, supervise the
 timer, grammarian and Ah-Counter, Evaluate everything that takes place during the club meeting and
-make sure each activity is performed correctly.EVALUATOR
+make sure each activity is performed correctly.
+<h4>EVALUATOR</h4>
 :Several days before the meeting, review the Effective Evaluation manual. Talk with the speaker or
 leader you’ve been assigned to evaluate and find out which manual project they will present. Review
 the project goals and what the speaker or leader hopes to achieve. Begin and end your evaluation
@@ -303,7 +313,8 @@ describe specifically how it was successful. Don’t allow the speaker or leader
 a valuable asset such as a smile or a sense of humor. Likewise, don’t permit the speaker or leader
 to remain ignorant of a serious fault: if it is personal, write it but don’t mention it aloud. Give
 the speaker or leader deserved praise and tactful suggestions in the manner you would like to
-receive them.AH-COUNTER
+receive them.
+<h4>AH-COUNTER</h4>
 The purpose of the Ah-Counter is to note any word or sound used as a crutch by anyone who speaks
 during the meeting. Words may be inappropriate interjections, such as and, well, but, so and you
 know. Sounds may be ah, um or er. You should also note when a speaker repeats a word or phrase such
@@ -313,7 +324,8 @@ One of the skills Toastmasters practice is expressing a thought within a specifi
 are responsible for monitoring time for each meeting segment and each speaker. You’ll also operate
 the timing signal, indicating to each speaker how long he or she has been talking. Serving as timer
 is an excellent opportunity to practice giving instructions and time management – something we do
-every day.WORD MASTER
+every day.
+<h4> WORD MASTER </h4>
 Select a "word of the day" for the meeting.It should be a word that will help members increase their
 vocabulary – a word that can be incorporated easily into everyday conversation but is different from
 the way people usually express themselves. Adjectives and adverbs are more adaptable than nouns or
@@ -330,7 +342,8 @@ language (incomplete sentences, sentences that change direction in midstream, in
 malapropisms) with a note of who erred. For example, point out if someone used a singular verb with
 a plural subject. “One in five children wear glasses” should be “one in five children wears
 glasses.” Note when a pronoun is misused. “No one in the choir sings better than her” should be “No
-one in the choir sings better than she.”THOUGHT OF THE DAY
+one in the choir sings better than she.”
+<h4>THOUGHT OF THE DAY</h4>
 The thought, an inspiring quotation that sets the tone for the day’s meeting, is a welcome option in
 many clubs. It is usually delivered by a designated club member at the beginning or the end of the
 meeting, and is sometimes used as a replacement for or in combination with an invocation or pledge
