--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ sans-serif;
 </style>
 <style>
 .titlefont {
-  font-family: "Bowlby One"
+  font-family: "Bowlby One";
+  font-size: 36px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
@@ -253,7 +254,7 @@ fill, and each job is designed to improve the members’<br>
 public speaking,listening and leadership skills. Program participants must know and understand their
 duties so they can prepare for them.
 ****If your role title is in BLUE, you have tasks to perform day(s) before the session ****
-<h4>VP EDUCATION</h4>
+<h4 class = "titlefont">VP EDUCATION</h4>
 Send out the meeting agenda with role assignments for the upcoming Saturday session by Tuesday.
 Inform Toasmaster to followup on unassigned roles.
 <h4>TOASTMASTER</h4>
